# SEO-Audit-Tool

./: .env.example  .gitignore  .server_err.txt  ARCHITECTURE.md  Dockerfile  GUIDE.md  README.md  after_deploy.json  alembic.ini  docker-compose.yml  output_after.json  output_final.json  output_final2.json  pyproject.toml  result.json  wiki.json
.claude/: launch.json
alembic/: env.py
backend/seo_audit/: __init__.py  cli.py  config.py  logging_setup.py  main.py
backend/seo_audit/api/: deps.py
backend/seo_audit/audits/: __init__.py  base.py  content.py  images.py  keywords.py  links.py  mobile.py  onpage.py  opengraph.py  performance.py  schema.py  technical.py
backend/seo_audit/core/: exceptions.py  security.py
backend/seo_audit/crawler/: __init__.py  crawler.py  fetcher.py  parser.py  robots.py  sitemap.py
backend/seo_audit/db/: base.py  models.py
backend/seo_audit/recommendations/: __init__.py  engine.py  library.py
backend/seo_audit/reporting/: csv_export.py  html_report.py  pdf_report.py
backend/seo_audit/schemas/: audit.py  report.py  user.py
backend/seo_audit/scoring/: __init__.py  scorer.py
backend/seo_audit/services/: audit_runner.py  email_service.py  notification_service.py
backend/seo_audit/tasks/: audit_tasks.py  celery_app.py  notifications.py
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: Charts.tsx  (+2 more)
tests/: conftest.py  test_audits.py  test_keywords.py  test_parser.py  test_recommendations.py  test_scoring.py  test_security.py
(+15 files in other folders)
