[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seo-audit"
version = "0.1.0"
description = "Production-quality SEO audit tool"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "tldextract>=5.1",
    "reppy>=0.4.14; sys_platform != 'win32'",
    "protego>=0.3",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "celery>=5.3",
    "redis>=5.0",
    "jinja2>=3.1",
    "weasyprint>=62.0",
    "pandas>=2.2",
    "plotly>=5.22",
    "nltk>=3.8",
    "spacy>=3.7",
    "typer>=0.12",
    "rich>=13.7",
    "email-validator>=2.1",
    "tenacity>=8.3",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
seo-audit = "seo_audit.cli:app"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
